# routing-PL

./: .dockerignore  .gitignore  Dockerfile  HHO.md  README.md  docker-compose.yml  start.sh
notebooks/: .gitignore  Bac1-GA-B.history.txt  Bac1.history.txt  EDA.ipynb  EDA.road.ipynb  GA-A.history.txt  GA-B.history.txt  analysis.ipynb  compare.ipynb  demo.ipynb  extract_locations.ipynb  noGA.history.txt  pyproject.toml  solution.ipynb
notebooks/geographical/: all_customers.csv  parcel_lockers.csv
src/: .gitignore  CMakeLists.txt  Kann.doc.md  README.md  check_locker_assignments.py  experiment.py  exract_report.ipynb  flop.py  main.py  main.sa.py  multistart_solver.py  param.yaml  pyproject.toml  sa.doe.yaml  sensitiviy.yaml  sizes.yaml  solution.txt  solve.sh  speedup.yaml  test_vrppl.py  tune.sh  tune_alns.sh  tune_paco.sh
src/.agent/rules/: project-context.md  vrrpl.md
src/data/: readme.txt
src/data/100/: C101_co_100.txt  C102_co_100.txt  C103_co_100.txt  C104_co_100.txt  C105_co_100.txt  C106_co_100.txt  C107_co_100.txt  C108_co_100.txt  C109_co_100.txt  C201_co_100.txt  C202_co_100.txt  C203_co_100.txt  C204_co_100.txt  C205_co_100.txt  C206_co_100.txt  C207_co_100.txt  C208_co_100.txt  R101_co_100.txt  R102_co_100.txt  R103_co_100.txt  R104_co_100.txt  R105_co_100.txt  R106_co_100.txt  R107_co_100.txt  R108_co_100.txt  R109_co_100.txt  R110_co_100.txt  R111_co_100.txt  R112_co_100.txt  R201_co_100.txt  R202_co_100.txt  R203_co_100.txt  R204_co_100.txt  R205_co_100.txt  R206_co_100.txt  R207_co_100.txt  R208_co_100.txt  R209_co_100.txt  R210_co_100.txt  R211_co_100.txt  (+16 more)
src/data/25/: C101_co_25.txt  C102_co_25.txt  C103_co_25.txt  C104_co_25.txt  C105_co_25.txt  C106_co_25.txt  C107_co_25.txt  C108_co_25.txt  C109_co_25.txt  C201_co_25.txt  C202_co_25.txt  C203_co_25.txt  C204_co_25.txt  C205_co_25.txt  C206_co_25.txt  C207_co_25.txt  C208_co_25.txt  R101_co_25.txt  R102_co_25.txt  R103_co_25.txt  R104_co_25.txt  R105_co_25.txt  R106_co_25.txt  R107_co_25.txt  R108_co_25.txt  R109_co_25.txt  R110_co_25.txt  R111_co_25.txt  R112_co_25.txt  R201_co_25.txt  R202_co_25.txt  R203_co_25.txt  R204_co_25.txt  R205_co_25.txt  R206_co_25.txt  R207_co_25.txt  R208_co_25.txt  R209_co_25.txt  R210_co_25.txt  R211_co_25.txt  (+16 more)
src/data/50/: C101_co_50.txt  C102_co_50.txt  C103_co_50.txt  C104_co_50.txt  C105_co_50.txt  C106_co_50.txt  C107_co_50.txt  C108_co_50.txt  C109_co_50.txt  C201_co_50.txt  C202_co_50.txt  C203_co_50.txt  C204_co_50.txt  C205_co_50.txt  C206_co_50.txt  C207_co_50.txt  C208_co_50.txt  R101_co_50.txt  R102_co_50.txt  R103_co_50.txt  R104_co_50.txt  R105_co_50.txt  R106_co_50.txt  R107_co_50.txt  R108_co_50.txt  R109_co_50.txt  R110_co_50.txt  R111_co_50.txt  R112_co_50.txt  R201_co_50.txt  R202_co_50.txt  R203_co_50.txt  R204_co_50.txt  R205_co_50.txt  R206_co_50.txt  R207_co_50.txt  R208_co_50.txt  R209_co_50.txt  R210_co_50.txt  R211_co_50.txt  (+16 more)
src/meta/: ACO.py  BCO.py  GreyWolf.py  MultiColony.py  PSO.py  SA.py  solver.py
src/meta/PSO/: Particle.py  solver.py
src/meta/genetics/: GA.py
src/output/: test.csv
src/output/analysis/: sen.large.csv  sen.large_2.csv  sen.large_2.summary.csv  sen.medium.csv  sen.medium.summary.csv  sen.medium_2.csv  sen.small.csv  sen.small.csv.summary.csv  sen.small.summary.csv  sen.small_2.csv  speedup.large.csv  (+3 more)
src/parameters/: _paco.param.yaml  aco.param.yaml  aco.tune.yaml  alns.param.yaml  alns.tune.yaml  chfa.param.yaml  ga.param.yaml  ga.tune.yaml  hfa.param.yaml  hfa.tune.yaml  hho.param.yaml  hho.tune.yaml  paco.param.yaml  paco.tune.yaml  sa.tune.yaml
src/results/: medium.sensitivity.csv  sensitivity.csv  sensitivity.csv.summary.csv
src/src/: main.cpp  test.cpp  tune.cpp  utils.cpp  utils.h
src/utils/: Particle.py  SA.py  config.py  load_data.py  route.py  solver.py
streamlit/: app.py  pyproject.toml  solver_api_client.py  solver_runner.py  vrp_parser.py
streamlit/parameters/: paco.param.yaml
yu-sa/: CMakeLists.txt  aco-ts.param.yaml  ga.doe.yaml  ga.param.yaml  main.py  paco.param.yaml  pyproject.toml
yu-sa/cpp_vrppl_loader/: CMakeLists.txt
yu-sa/parameters/: aco-ts.param.yaml  aco-ts.tune.yaml  paco.param.yaml  paco.tune.yaml  sa.param.yaml
yu-sa/src/: ACO_TS.cpp  ACO_TS.h  Customer.cpp  InstanceParser.h  Locker.h  SA.cpp  Solver.cpp  Solver.h  VRPInstance.h  bao.cpp  bo_runner.py  doe.cpp  main.cpp  test.cpp  tune.cpp
(+122 files in other folders)
