[project]
name = "notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.12",
    "matplotlib>=3.10.0",
    "osmnx>=2.0.1",
    "pip>=25.0.1",
    "pydantic>=2.10.6",
    "scikit-learn>=1.6.1",
    "setuptools>=75.8.0",
]
