[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "nuitka>=2.6.5",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "platypus-opt>=1.4.1",
    "pydantic>=2.10.5",
    "pyyaml>=6.0.2",
    "scipy>=1.15.1",
]
