[project]
name = "vrp-viz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "pyyaml>=6.0.3",
    "streamlit>=1.51.0",
]

[tool.setuptools]
py-modules = ["app", "solver_api_client", "vrp_parser"]
